--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
 :root {
-  --background: #ffffff;
+  --background: #3e98ff;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #1b293f;
     --foreground: #ededed;
   }
 }
@@ -23,6 +23,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 * {
   box-sizing: border-box;
