--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,47 +1,74 @@
-/* styles/Home.module.css */
 .header {
+  background-color: #4A90E2; 
+  color: white; 
+  padding: 20px; 
   text-align: center;
-  padding: 2rem;
-  background-color: rgba(0, 0, 0, 0.233);
 }
 
 .main {
-  padding: 2rem;
-}
-
-.sectionTitle {
-  font-size: large;
-  padding: 1rem;
-}
-
-.cardContainer {
-  display: flex;
-  overflow-x: auto;
-  padding: 1rem;
-  cursor: grab;
-}
-
-.card {
-  min-width: 250px;
-  margin-right: 1rem;
-  background: #f1f1f148;
-  border-radius: 16px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  padding: 1rem;
-}
-
-.card:hover{
-  transform: scale(1.05);
-}
-
-.cardImage {
-  width: 100%;
-  border-radius: 8px;
+  padding: 20px; 
+  max-width: 800px; 
+  margin: auto; 
 }
 
 .container_title {
-  margin-top: 1rem ;
-  padding: 1rem;
-  font-size: 1.5rem;
+  font-size: 24px; 
+  margin: 20px 0; 
+  font-weight: bold;
+  text-align: center; 
+}
+
+.description {
+  font-size: 16px;
+  margin-bottom: 30px; 
+  line-height: 1.5; 
+  text-align: justify; 
+}
+
+.cardContainer {
+  display: flex; 
+  overflow-x: auto; 
+  padding: 10px 0; 
+  scroll-snap-type: x mandatory; 
+}
+
+.card {
+  background-color: #3333335e; 
+  border: 1px solid #ddd; 
+  border-radius: 8px; 
+  overflow: hidden; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+  transition: transform 0.3s; 
+  cursor: pointer; 
+  min-width: 250px; 
+  margin-right: 20px; 
+  scroll-snap-align: start; 
+}
+
+.card:hover {
+  transform: scale(1.05); 
+}
+
+.cardImage {
+  width: 100%; 
+  height: auto; 
+}
+
+.card h3 {
+  margin: 10px;
+  font-size: 18px;
+  text-align: center; 
+}
+
+.cardContainer::-webkit-scrollbar {
+  height: 8px;
+}
+
+.cardContainer::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px; 
+}
+
+.cardContainer::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
