--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,4 +1,3 @@
-/* styles/Login.module.css */
 .loginContainer {
     display: flex;
     flex-direction: column;
@@ -10,7 +9,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 400px; /* Maksimal lebar form */
+    max-width: 400px; 
     background-color: #666b6d86;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -34,5 +33,5 @@
   }
   
   .loginForm button:hover {
-    background-color: #555; /* Warna saat hover */
+    background-color: #555; 
   }
