--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -3,6 +3,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 800px;
+    margin-top: 40px;
     margin: 0 auto;
     font-family: Arial, sans-serif;
 }
