update responsiveness navbar

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -64,3 +64,20 @@
 .logout:hover{
     color: #ffcc00;
 }
+
+
+@media (max-width: 768px) {
+    .nav {
+        flex-direction: column;
+        gap: 2rem; 
+    }
+
+    .nav-left, .nav-right {
+        flex-direction: column; 
+        gap: 1rem;
+    }
+
+    .navbar-brand {
+        padding: 2rem; 
+    }
+}
