--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #4A90E2; 
+  background-color: #3c78bd73; 
   color: white; 
   padding: 20px; 
   text-align: center;
